[package]
name = "virtual-lorawan-device"
version = "0.2.14-alpha.0"
authors = ["lthiery <thiery.louis@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0"
config = { version="0.14", default-features = false, features = ["toml"] }
env_logger = "0"
futures-util = "0"
heapless = "^0.8"
hex = "0"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = {  version = "0", features = ["tokio"] }
log = "0"
#lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", features = ["default-crypto", "serde"]  }
lorawan-device = { path = "../lora-rs/lorawan-device", features = ["default-crypto", "serde"]  }
prometheus = "0"
rand_core = { version = "0.6", default-features = false, optional = true }
semtech-udp = { path = "../semtech-udp", features = ["client"] }#{ version = "0.11" }
serde = "1"
structopt = "0"
thiserror = "1"
rand = "0"
triggered = "0"

[dependencies.tokio]
version = "1"
features = ["macros", "sync", "time", "rt-multi-thread", "signal"]

[features]
async-radio = ["rand_core"]
